components/mycomponent/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    appstudio.openshift.io/application: application-sample
    appstudio.openshift.io/component: mycomponent
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elmycomponent
  namespace: rhopp
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-mycomponent
    weight: null
status: {}
